# lingo

./: .gitmodules  CMakeLists.txt  generate_orange.rb  imagenet.cpp  imagenet.h  lingo.cpp
rails/: Gemfile  MIT-LICENSE  README.md  lingo.gemspec
rails/app/assets/config/: lingo_manifest.js
rails/app/assets/stylesheets/lingo/: main.css.scss
rails/app/controllers/lingo/: application_controller.rb  scores_controller.rb
rails/app/helpers/lingo/: application_helper.rb  scores_helper.rb
rails/app/jobs/lingo/: application_job.rb
rails/app/mailers/lingo/: application_mailer.rb
rails/app/models/lingo/: application_record.rb  score.rb
rails/app/views/layouts/lingo/: application.html.haml
rails/app/views/lingo/scores/: index.html.haml
rails/config/: routes.rb
rails/db/migrate/: 20221210011146_create_lingo_scores.rb  20221210174554_widen_user_id_field.rb
rails/lib/: lingo.rb
rails/lib/lingo/: engine.rb
rails/lib/tasks/: lingo_tasks.rake
rails/test/: lingo_test.rb
rails/test/controllers/lingo/: scores_controller_test.rb
rails/test/dummy/app/assets/config/: manifest.js
rails/test/dummy/config/: application.rb  routes.rb
rails/test/dummy/db/: schema.rb
rails/test/dummy/db/migrate/: 20221210141051_create_lingo_scores.lingo.rb  20221210174732_widen_user_id_field.lingo.rb
rails/test/fixtures/lingo/: scores.yml
rails/test/models/lingo/: score_test.rb
web/: Gemfile  web.rb
web/views/: index.haml  style.scss
